Исправлено по замечаниям